--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -2583,13 +2583,19 @@
   .light-buttons .light-off {
     height: 2250px;
   }
+  .floor {
+    width: 1300px;
+  }
   .postits {
-    left: -430px;
+    left: -400px;
     top: 700px;
+  }
+  .postits p {
+    padding-top: 170px;
   }
   .awssld, .bio-card, .contact-card {
     top: 800px;
-    left: 165px;
+    left: 200px;
   }
 }
 
