changes styling for min_width_1024px.scss

--- a/src/STYLES/_min_width_1024px.scss
+++ b/src/STYLES/_min_width_1024px.scss
@@ -7,15 +7,16 @@
 
     .floor{
         width: 1160px;
+        height: 250px;
     }
 
     .postits{
-        top: 750px;
-        left: -465px;
+        top: 800px;
+        left: -165px;
     }
 
     .awssld, .bio-card, .contact-card{
-        top: 840px;
-        left: 20px;
+        top: 890px;
+        left: 80px;
     }
 }
