changes styling for min_width_2500px.scss

--- a/src/STYLES/_min_width_2500px.scss
+++ b/src/STYLES/_min_width_2500px.scss
@@ -555,6 +555,14 @@
         padding-left: 380px;
     }
 
+    .x{
+        width: 60px;
+        height: 60px;
+        font-size: 30px;
+        line-height: 30px;
+        left: 1920px;
+    }
+
     @keyframes open-curtain-2500 {
         from {
             height: 570px;
