--- a/src/STYLES/_min_width_5000px.scss
+++ b/src/STYLES/_min_width_5000px.scss
@@ -290,4 +290,12 @@
             top: 700px;
         }
     }
+
+    .x{
+        width: 80px;
+        height: 80px;
+        font-size: 40px;
+        line-height: 40px;
+        left: 3500px;
+    }
 }
