changes styling for min_width_1280px.scss

--- a/src/STYLES/_min_width_1280px.scss
+++ b/src/STYLES/_min_width_1280px.scss
@@ -32,6 +32,10 @@
         margin-top: 30px;
     }
 
+    .bio .text-container{
+         line-height: 45px;
+    }
+
     .codepen-div{
         width: 30%;
     }
