--- a/src/STYLES/_min_width_510px.scss
+++ b/src/STYLES/_min_width_510px.scss
@@ -6,41 +6,45 @@
     }
 
     .postits{
-      left: -300px;
-      top:700px;
+      left: -350px;
+      top:750px;
       p{
-          padding-top: 150px;
+          padding-top: 100px;
       }
       .post-it-1, .post-it-2, .post-it-3, .post-it-4{
-         width:350px;
-         height: 350px;
+         width:250px;
+         height: 250px;
          &:after{
-              width:350px;
-              height: 350px;
+              width:250px;
+              height: 250px;
           }
       }
       .post-it-2{
-          left: 1000px;
+          left: 950px;
       }
       .post-it-3{
-          top: 490px;
+          top: 400px;
       }
       .post-it-4{
-          left: 1000px;
-          top:490px;
+          left: 950px;
+          top:400px;
       }
     }
 
     .awssld, .bio-card, .contact-card{
       top: 800px;
-      left: 300px;
+      left:200px;
       width: 750px !important;
-      height: 750px !important;
+      height: 600px !important;
     }
 
     .bio-card .text-container{
       line-height: normal;
-      // padding:25px 0 10px 25px;
+      padding:20px 0 10px 40px;
+    }
+
+    .bio-img-container img{
+        margin-top: 100px;
     }
 
     .x{
