changes styling for min_width_730px.scss

--- a/src/STYLES/_min_width_730px.scss
+++ b/src/STYLES/_min_width_730px.scss
@@ -106,6 +106,10 @@
         width: 100%;
     }
 
+    .bio .text-container{
+        padding-top: 100px;
+    }
+
     .project-div {
         padding-top: 5em;
         .codepen-div{
