changes styling for min_width_740px.scss

--- a/src/STYLES/_min_width_740px.scss
+++ b/src/STYLES/_min_width_740px.scss
@@ -46,6 +46,14 @@
         padding: 10px 0 10px 10px;
     }
 
+    .bio-img-container img{
+        margin-top: 40px;
+    }
+
+    .bio .text-container {
+        padding-top: 20px;
+    }
+
     iframe{
         height: 110vh;
     }
