changes styling for min_width_760px.scss

--- a/src/STYLES/_min_width_760px.scss
+++ b/src/STYLES/_min_width_760px.scss
@@ -47,6 +47,9 @@
         margin: 140px auto;
     }
 
+    .bio .text-container{
+        padding-top: 140px;
+    }
     .project-div{
         padding-top: 5em;
     }
