changes styling for min_width_1336px.scss

--- a/src/STYLES/_min_width_1336px.scss
+++ b/src/STYLES/_min_width_1336px.scss
@@ -24,12 +24,14 @@
         padding-top: 100px;
     }
 
-    .skill-slide{
-        height: auto !important;
+    .project-div{
+        .codepen{
+            padding-left: 80px;
+        }
     }
 
-    iframe{
-        height:60vh;
+    .skill-slide{
+        height: auto !important;
     }
 
     .front-end img, .back-end img{
