changes styling for min_width_1366px.scss

--- a/src/STYLES/_min_width_1366px.scss
+++ b/src/STYLES/_min_width_1366px.scss
@@ -52,8 +52,17 @@
         margin-top: 150px;
     }
 
+    .project-div{
+        .codepen{
+            padding-left: 100px;
+            .codepen-div{
+                height: 370px;
+            }
+        }
+    }
+
     iframe{
-        height:40vh;
+        height:500px;
     }
 
     .front-end img, .back-end img{
