--- a/src/STYLES/_min_width_1900px.scss
+++ b/src/STYLES/_min_width_1900px.scss
@@ -64,12 +64,7 @@
         margin: 100px auto;
     }
 
-    .project-div{
-       padding-top: 5em;
-    }
-
     .text-container{
-        padding: 300px 0 20px 60px;
         line-height: 55px;
     }
 
@@ -78,6 +73,6 @@
     }
 
     iframe{
-      height: 35vh;
+        height: 400px;
     }
 }
