changes styling for min_width_375px.scss

--- a/src/STYLES/_min_width_375px.scss
+++ b/src/STYLES/_min_width_375px.scss
@@ -19,8 +19,12 @@
       left: 105px;
     }
 
-    iframe{
-      height: 70vh;
+    .bio .text-container{
+      padding-top: 150px;
+    }
+
+    .bio-img-container img{
+      margin-top: 200px;
     }
 }
 
